{
  "version": 4,
  "terraform_version": "0.12.26",
  "serial": 2861,
  "lineage": "cd94f7a7-27bb-4c21-2a1a-7646aaf52e6e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "private_route",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "default_route_table_id": "rtb-06f0771b0d8874388",
            "id": "rtb-06f0771b0d8874388",
            "owner_id": "033914270330",
            "propagating_vgws": null,
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-03d25255fb3169e72",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "cluster-private-route-table"
            },
            "vpc_id": "vpc-01ad44a88ae3206f3"
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_internet_gateway.main",
            "aws_nat_gateway.nat",
            "aws_subnet.public_subnet",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-0ec7d8ff457b672e9",
            "public_dns": "ec2-52-57-230-183.eu-central-1.compute.amazonaws.com",
            "public_ip": "52.57.230.183",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "admin-node",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e342d72b12109f91",
            "arn": "arn:aws:ec2:eu-central-1:033914270330:instance/i-0d17a3cc982181b6e",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1c",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d17a3cc982181b6e",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "cluster_key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-045ad3b1d5ee8766b",
            "private_dns": "ip-172-31-16-8.eu-central-1.compute.internal",
            "private_ip": "172.31.16.8",
            "public_dns": "ec2-3-120-185-39.eu-central-1.compute.amazonaws.com",
            "public_ip": "3.120.185.39",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0958d3d9967359484",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03cedfc011f6f8768",
            "tags": {
              "Name": "Cluster Manager"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-006915776bbea2379",
              "sg-0a3b2e5a341af0c0f",
              "sg-0de9fc6c9878ff7c8"
            ]
          },
          "dependencies": [
            "aws_key_pair.cluster_key",
            "aws_security_group.admin_access_private",
            "aws_security_group.admin_access_public",
            "aws_security_group.default_egress",
            "aws_subnet.public_subnet",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "cassandra-nodes",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e342d72b12109f91",
            "arn": "arn:aws:ec2:eu-central-1:033914270330:instance/i-0eac54f0b89b11447",
            "associate_public_ip_address": false,
            "availability_zone": "eu-central-1c",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0eac54f0b89b11447",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "cluster_key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0f7b536e2eb6c205d",
            "private_dns": "ip-172-31-10-235.eu-central-1.compute.internal",
            "private_ip": "172.31.10.235",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0f66fd0836ab4512e",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f96a420cee875da6",
            "tags": {
              "DomainName": "node-0.cassandra.cluster",
              "Name": "Cassandra-Node-0"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-006915776bbea2379",
              "sg-0a3b2e5a341af0c0f"
            ]
          },
          "dependencies": [
            "aws_key_pair.cluster_key",
            "aws_security_group.admin_access_private",
            "aws_security_group.default_egress",
            "aws_subnet.private_subnet",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e342d72b12109f91",
            "arn": "arn:aws:ec2:eu-central-1:033914270330:instance/i-0e7f3b9ec549a7deb",
            "associate_public_ip_address": false,
            "availability_zone": "eu-central-1c",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e7f3b9ec549a7deb",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "cluster_key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0ea0f1ca013aaa73e",
            "private_dns": "ip-172-31-11-210.eu-central-1.compute.internal",
            "private_ip": "172.31.11.210",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-08c22422b71e3c33e",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f96a420cee875da6",
            "tags": {
              "DomainName": "node-1.cassandra.cluster",
              "Name": "Cassandra-Node-1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-006915776bbea2379",
              "sg-0a3b2e5a341af0c0f"
            ]
          },
          "dependencies": [
            "aws_key_pair.cluster_key",
            "aws_security_group.admin_access_private",
            "aws_security_group.default_egress",
            "aws_subnet.private_subnet",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e342d72b12109f91",
            "arn": "arn:aws:ec2:eu-central-1:033914270330:instance/i-08cec9f5d0ae11b75",
            "associate_public_ip_address": false,
            "availability_zone": "eu-central-1c",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08cec9f5d0ae11b75",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "cluster_key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0e32ce876a424b1d6",
            "private_dns": "ip-172-31-12-66.eu-central-1.compute.internal",
            "private_ip": "172.31.12.66",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0fb57a5192835b3a2",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f96a420cee875da6",
            "tags": {
              "DomainName": "node-2.cassandra.cluster",
              "Name": "Cassandra-Node-2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-006915776bbea2379",
              "sg-0a3b2e5a341af0c0f"
            ]
          },
          "dependencies": [
            "aws_key_pair.cluster_key",
            "aws_security_group.admin_access_private",
            "aws_security_group.default_egress",
            "aws_subnet.private_subnet",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "master-node",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e342d72b12109f91",
            "arn": "arn:aws:ec2:eu-central-1:033914270330:instance/i-0c768ee2eb407d14f",
            "associate_public_ip_address": false,
            "availability_zone": "eu-central-1c",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c768ee2eb407d14f",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "cluster_key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-08f59d88ea36104a5",
            "private_dns": "ip-172-31-7-40.eu-central-1.compute.internal",
            "private_ip": "172.31.7.40",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-05fd5c29d52d90f6c",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f96a420cee875da6",
            "tags": {
              "Name": "Hadoop-Master"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-006915776bbea2379",
              "sg-0a3b2e5a341af0c0f"
            ]
          },
          "dependencies": [
            "aws_key_pair.cluster_key",
            "aws_security_group.admin_access_private",
            "aws_security_group.default_egress",
            "aws_subnet.private_subnet",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "slave-nodes",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e342d72b12109f91",
            "arn": "arn:aws:ec2:eu-central-1:033914270330:instance/i-0702e0fe8da698da2",
            "associate_public_ip_address": false,
            "availability_zone": "eu-central-1c",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0702e0fe8da698da2",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "cluster_key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-080036c777ae834d0",
            "private_dns": "ip-172-31-3-155.eu-central-1.compute.internal",
            "private_ip": "172.31.3.155",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0da43bf814d5e7728",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f96a420cee875da6",
            "tags": {
              "DomainName": "slave-0.hadoop.cluster",
              "Name": "Hadoop-Slave-0"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-006915776bbea2379",
              "sg-0a3b2e5a341af0c0f"
            ]
          },
          "dependencies": [
            "aws_key_pair.cluster_key",
            "aws_security_group.admin_access_private",
            "aws_security_group.default_egress",
            "aws_subnet.private_subnet",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e342d72b12109f91",
            "arn": "arn:aws:ec2:eu-central-1:033914270330:instance/i-03ae96bfc90a7d9eb",
            "associate_public_ip_address": false,
            "availability_zone": "eu-central-1c",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-03ae96bfc90a7d9eb",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "cluster_key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0b0dc93dd64f14f97",
            "private_dns": "ip-172-31-11-109.eu-central-1.compute.internal",
            "private_ip": "172.31.11.109",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-062c5334c8d2b4b7d",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f96a420cee875da6",
            "tags": {
              "DomainName": "slave-1.hadoop.cluster",
              "Name": "Hadoop-Slave-1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-006915776bbea2379",
              "sg-0a3b2e5a341af0c0f"
            ]
          },
          "dependencies": [
            "aws_key_pair.cluster_key",
            "aws_security_group.admin_access_private",
            "aws_security_group.default_egress",
            "aws_subnet.private_subnet",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e342d72b12109f91",
            "arn": "arn:aws:ec2:eu-central-1:033914270330:instance/i-0feceac3a7a5107a2",
            "associate_public_ip_address": false,
            "availability_zone": "eu-central-1c",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0feceac3a7a5107a2",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "cluster_key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0dfc69a6a62b07e30",
            "private_dns": "ip-172-31-14-73.eu-central-1.compute.internal",
            "private_ip": "172.31.14.73",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0158c044074a6591f",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f96a420cee875da6",
            "tags": {
              "DomainName": "slave-2.hadoop.cluster",
              "Name": "Hadoop-Slave-2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-006915776bbea2379",
              "sg-0a3b2e5a341af0c0f"
            ]
          },
          "dependencies": [
            "aws_key_pair.cluster_key",
            "aws_security_group.admin_access_private",
            "aws_security_group.default_egress",
            "aws_subnet.private_subnet",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:033914270330:internet-gateway/igw-03794dec411284780",
            "id": "igw-03794dec411284780",
            "owner_id": "033914270330",
            "tags": {
              "Name": "Cluster Internet Gateway"
            },
            "vpc_id": "vpc-01ad44a88ae3206f3"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ec7d8ff457b672e9",
            "id": "nat-03d25255fb3169e72",
            "network_interface_id": "eni-01369c5a4f6bad52a",
            "private_ip": "172.31.28.57",
            "public_ip": "52.57.230.183",
            "subnet_id": "subnet-03cedfc011f6f8768",
            "tags": {
              "Name": "NAT Gateway"
            }
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_internet_gateway.main",
            "aws_subnet.public_subnet",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "internet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0bd2bf59eb5619b5d",
            "owner_id": "033914270330",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-03d25255fb3169e72",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Cluster Routing Table"
            },
            "vpc_id": "vpc-01ad44a88ae3206f3"
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_internet_gateway.main",
            "aws_nat_gateway.nat",
            "aws_subnet.public_subnet",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0efcec428b2c5bfc6",
            "owner_id": "033914270330",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03794dec411284780",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "cluster-public-route-table"
            },
            "vpc_id": "vpc-01ad44a88ae3206f3"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_assoc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c1e2ada0f3f3fc04",
            "route_table_id": "rtb-06f0771b0d8874388",
            "subnet_id": "subnet-0f96a420cee875da6"
          },
          "dependencies": [
            "aws_default_route_table.private_route",
            "aws_eip.eip",
            "aws_internet_gateway.main",
            "aws_nat_gateway.nat",
            "aws_subnet.private_subnet",
            "aws_subnet.public_subnet",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_assoc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-002d8e916b006446f",
            "route_table_id": "rtb-0efcec428b2c5bfc6",
            "subnet_id": "subnet-03cedfc011f6f8768"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public_route",
            "aws_subnet.public_subnet",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "admin_access_private",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:033914270330:security-group/sg-006915776bbea2379",
            "description": "Allow All Private Access",
            "egress": [],
            "id": "sg-006915776bbea2379",
            "ingress": [],
            "name": "admin_access_private",
            "name_prefix": null,
            "owner_id": "033914270330",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Internal Instances SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-01ad44a88ae3206f3"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "admin_access_public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:033914270330:security-group/sg-0de9fc6c9878ff7c8",
            "description": "Admin Access Public",
            "egress": [],
            "id": "sg-0de9fc6c9878ff7c8",
            "ingress": [],
            "name": "admin_access_public",
            "name_prefix": null,
            "owner_id": "033914270330",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Admin Instance SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-01ad44a88ae3206f3"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "default_egress",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:033914270330:security-group/sg-0a3b2e5a341af0c0f",
            "description": "Default Egress",
            "egress": [],
            "id": "sg-0a3b2e5a341af0c0f",
            "ingress": [],
            "name": "default_egress",
            "name_prefix": null,
            "owner_id": "033914270330",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Open Outbound SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-01ad44a88ae3206f3"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "admin_access_private_allow_all",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "172.31.0.0/16"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-1373319149",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-006915776bbea2379",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.admin_access_private",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "admin_access_public_ssh",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 22,
            "id": "sgrule-2868629713",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0de9fc6c9878ff7c8",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.admin_access_public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "default_egress",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-1414186921",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0a3b2e5a341af0c0f",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "dependencies": [
            "aws_security_group.default_egress",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:033914270330:subnet/subnet-0f96a420cee875da6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1c",
            "availability_zone_id": "euc1-az1",
            "cidr_block": "172.31.0.0/20",
            "id": "subnet-0f96a420cee875da6",
            "map_public_ip_on_launch": false,
            "owner_id": "033914270330",
            "tags": {
              "Name": "Cluster Subnet A"
            },
            "vpc_id": "vpc-01ad44a88ae3206f3"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:033914270330:subnet/subnet-03cedfc011f6f8768",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1c",
            "availability_zone_id": "euc1-az1",
            "cidr_block": "172.31.16.0/20",
            "id": "subnet-03cedfc011f6f8768",
            "map_public_ip_on_launch": true,
            "owner_id": "033914270330",
            "tags": {
              "Name": "Cluster Subnet B"
            },
            "vpc_id": "vpc-01ad44a88ae3206f3"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:033914270330:vpc/vpc-01ad44a88ae3206f3",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-0a7da566208f5f66f",
            "default_route_table_id": "rtb-06f0771b0d8874388",
            "default_security_group_id": "sg-0230b323da09fda5a",
            "dhcp_options_id": "dopt-0d82e4ff0b76a5a5b",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-01ad44a88ae3206f3",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-06f0771b0d8874388",
            "owner_id": "033914270330",
            "tags": {
              "Name": "Cluster VPC"
            }
          }
        }
      ]
    }
  ]
}